--- a/Code/EDA.ipynb
+++ b/Code/EDA.ipynb
@@ -1837,7 +1837,7 @@
    "id": "2ecaec90",
    "metadata": {},
    "source": [
-    "#### Creating new features based on CAN's data - `weight_diff`, `num_of_prior_diseases`, `body_BMI`:"
+    "#### Creating new features based on CAN's data -  `num_of_prior_diseases`, `body_BMI`:"
    ]
   },
   {
@@ -1854,8 +1854,6 @@
    "source": [
     "FEET_TO_METER = 0.254\n",
     "LBS_TO_KG = 0.453592\n",
-    "\n",
-    "#df_can['weight_diff'] = df_can['current_weight'] - df_can['weight_before']\n",
     "\n",
     "df_can['num_of_prior_diseases'] = df_can[diseases_features].sum(axis=1)\n",
     "\n",
@@ -5580,7 +5578,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
